# compact-option

./: .gitignore  Cargo.toml  LICENSE  README.md  release-plz.toml  rust-toolchain.toml
.cargo/: config.toml
.config/: nextest.toml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  release-plz.yml
core/: CHANGELOG.md  Cargo.toml  README.md
core/src/: lib.rs  proptests.rs
core/tests/: macro_ui.rs
core/tests/compile_fail/: layout_mismatch.rs  layout_mismatch.stderr
core/tests/compile_pass/: macro_enum.rs  macro_enum_hex_discriminant.rs  macro_enum_u16.rs  macro_newtype.rs  macro_newtype_alias_layout.rs  macro_sentinel_equals_discriminant.rs  macro_verify_discriminants_false.rs
proc-macro/: CHANGELOG.md  Cargo.toml  README.md
proc-macro/src/: expand_enum.rs  expand_struct.rs  lib.rs  parse.rs
