[workspace]
resolver = "3"
members = ["core/", "proc-macro/"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/goodvibs/compact-option"

[workspace.dependencies]
compact-option = { path = "core/" }
compact-option-proc-macro = { path = "proc-macro/" }
proptest = "1.11"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
trybuild = "1"
