[workspace]
resolver = "3"
members = ["core/", "proc-macro/"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/goodvibs/compact-option"

[workspace.dependencies]
# `version` is required for publishing to crates.io; the `path` is used for
# local workspace builds. release-plz keeps the version in lockstep with
# `[workspace.package].version` on every Release PR.
compact-option-proc-macro = { path = "proc-macro/", version = "0.1.0" }
proptest = "1.11"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
trybuild = "1"
