[package]
name = "compact-option-proc-macro"
version = { workspace = true }
edition = { workspace = true }
description = "Attribute macro emitting `unsafe impl compact_option::CompactRepr` for enums and structs (minimal parsing; layout asserts for structs)."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
